[package]
name = "r2d2"
version = "0.8.6"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A generic connection pool"
repository = "https://github.com/sfackler/r2d2"
readme = "README.md"
keywords = ["database", "pool"]
edition = "2018"

[dependencies]
log = "0.4"
parking_lot = "0.9"
scheduled-thread-pool = "0.2"
futures = { version = "0.3"}
tokio = { version = "0.2", optional = true, features = ["macros", "time", "rt-threaded"]}

[features]
async = ["tokio"]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "full"]}
